# swig-issue-example

./: .gitignore  CMakeLists.txt  README.rst  bar.cpp  bar.h  bar.i  base.cpp  base.h  base.i  base_p.h  baz.cpp  baz.h  baz.i  bazza.cpp  bazza.h  bazza.i  foo.cpp  foo.h  foo.i  test_script.py
